aws/vpc/vpc-example-2/main.tf
#Create the VPC
resource "aws_vpc" "Main" {            # Creating VPC here
  cidr_block       = var.main_vpc_cidr # Defining the CIDR block use 10.0.0.0/24 for demo
  instance_tenancy = "default"

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-vpc-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}

# Create Internet Gateway and attach it to VPC
resource "aws_internet_gateway" "IGW" { # Creating Internet Gateway
  vpc_id = aws_vpc.Main.id              # vpc_id will be generated after we create VPC

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-igw-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}

# Create a Public Subnets.
resource "aws_subnet" "publicsubnets" { # Creating Public Subnets
  vpc_id     = aws_vpc.Main.id
  cidr_block = var.public_subnets # CIDR block of public subnets

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-public-subnet-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}

# Create a Private Subnet                   # Creating Private Subnets
resource "aws_subnet" "privatesubnets" {
  vpc_id     = aws_vpc.Main.id
  cidr_block = var.private_subnets # CIDR block of private subnets

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-private-subnet-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}

# Route table for Public Subnet's
resource "aws_route_table" "PublicRT" { # Creating RT for Public Subnet
  vpc_id = aws_vpc.Main.id
  route {
    cidr_block = "0.0.0.0/0" # Traffic from Public Subnet reaches Internet via Internet Gateway
    gateway_id = aws_internet_gateway.IGW.id
  }

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-public-rt-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}

# Route table for Private Subnet's
resource "aws_route_table" "PrivateRT" { # Creating RT for Private Subnet
  vpc_id = aws_vpc.Main.id
  route {
    cidr_block     = "0.0.0.0/0" # Traffic from Private Subnet reaches Internet via NAT Gateway
    nat_gateway_id = aws_nat_gateway.NATgw.id
  }

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-private-rt-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}

# Route table Association with Public Subnet's
resource "aws_route_table_association" "PublicRTassociation" {
  subnet_id      = aws_subnet.publicsubnets.id
  route_table_id = aws_route_table.PublicRT.id
}

# Route table Association with Private Subnet's
resource "aws_route_table_association" "PrivateRTassociation" {
  subnet_id      = aws_subnet.privatesubnets.id
  route_table_id = aws_route_table.PrivateRT.id
}

resource "aws_eip" "nateIP" {
  vpc = true
}

# Creating the NAT Gateway using subnet_id and allocation_id
resource "aws_nat_gateway" "NATgw" {
  allocation_id = aws_eip.nateIP.id
  subnet_id     = aws_subnet.publicsubnets.id

  tags = merge(
    var.additional_tags,
    {
      Name = format("%s-%s-nat-gateway-%s", var.additional_tags.Project, var.additional_tags.Example, var.additional_tags.Environment)
    }
  )
}
